--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "atob": "^2.1.2",
+    "express": "^4.21.1",
+    "file-type": "^19.6.0"
+  }
 }
